# rest_queue

./: README.md  pyproject.toml  tox.ini
client/: rq_client.py
docker/: Dockerfile
rest_queue/src/: requirements.txt  rest_queue.py
tests/: __init__.py  test_api.py  test_queue.py
